# polars_cache

./: README.md  pyproject.toml
.github/workflows/: cicd.yml
polars_cache/: cache.py  hashing.py
src/polars_cache/: __init__.py  old_cache.py
tests/: conftest.py  test_cache.py
