[project]
name = "polars-cache"
version = "0.1.11"
description = "A lightweight caching library for polars"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "pytest>=8.3.4",
]
