[project]
name = "polars-cache"
version = "1.0.5"
description = "A lightweight caching library for polars"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.30.0",
]

[project.urls]
Homepage = "https://alipatti.com/polars_cache/polars_cache.html"
Repository = "https://github.com/alipatti/polars_cache"
Documentation = "https://alipatti.com/polars_cache/polars_cache.html"
Issues = "https://github.com/alipatti/polars_cache/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "pdoc>=15.0.4",
    "pytest>=8.3.4",
]

[tool.ruff.lint]
select = ["D", "I"]
pydocstyle.convention = "numpy"
per-file-ignores = { "tests/**/*.py" = ["D"] }
